--- a/estilos/box.css
+++ b/estilos/box.css
@@ -4,6 +4,11 @@ div {
     display: block;
     width: 200px;
     height: 120px;
+    overflow: auto;
+    padding: 10px;
+    border: solid 2px blue;
+    margin: 15px;
+    box-sizing: border-box;
 }
 
 #a{
@@ -12,4 +17,5 @@ div {
 
 #b{
     background-color: green;
+    padding: 20px 10px 5px 0px;
 }
