--- a/estilos/box.css
+++ b/estilos/box.css
@@ -6,8 +6,7 @@ div {
     height: 120px;
     overflow: auto;
     padding: 10px;
-    border: solid 2px blue;
-    margin: 15px;
+    border: solid 2px orangered;
     box-sizing: border-box;
 }
 
@@ -17,9 +16,10 @@ div {
 
 #b{
     background-color: green;
-    padding: 20px 10px 5px 0px;
-    float: right;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
 #c{
-    float: right;
+    background-color: blue;
 }
